--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: appstate_widget
 description: Make stateful widget prettier and less boilerplate.
-version: 1.1.0
+version: 1.2.0
 homepage: https://github.com/Nialixus/appstate_widget.git
 
 environment:
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  logger: ^1.4.0
+  flutter_svg: ^2.0.7
+  go_router: ^9.0.0
 
 dev_dependencies:
   flutter_test:
