--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/Nialixus/appstate_widget.git
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
   equatable: ^2.0.5
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.7
   go_router: ^9.0.3
   logger: ^1.4.0
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -24,7 +25,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter: null
-
 # To add assets to your package, add an assets section, like this:
 # assets:
 #   - images/a_dot_burr.jpeg
