--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-  uses-material-design: true
   assets:
-    - assets/image/
-    - assets/translation/
+    - assets/image
+    - assets/translation
+    - assets
+  uses-material-design: true
