--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: A library that brings together a harmonious blend of essential
   tools, utilities, and components designed to supercharge your Dart projects.
 version: 2.3.0
 homepage: https://github.com/Nialixus/dart_fusion.git
+funding: https://www.buymeacoffee.com/nialixus
+topics: collection
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
