--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
-  go_router: ^9.0.3
+  go_router: ^11.0.0
   http: ^1.1.0
-  logger: ^1.4.0
+  logger: ^2.0.2+1
   universal_file: ^1.0.0
 
 dev_dependencies:
