--- a/dart_fusion_flutter/example/pubspec.yaml
+++ b/dart_fusion_flutter/example/pubspec.yaml
@@ -9,10 +9,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dart_fusion:
-    git:
-      url: https://github.com/Nialixus/dart_fusion
-      path: dart_fusion
-      ref: v3.0.1
+    path: ../../dart_fusion/
   dart_fusion_flutter:
     path: ../
   easy_localization: ^3.0.3
