--- a/dart_fusion_flutter/pubspec.yaml
+++ b/dart_fusion_flutter/pubspec.yaml
@@ -22,9 +22,7 @@ environment:
 
 dependencies:
   dart_fusion:
-    git:
-      url: https://github.com/Nialixus/dart_fusion
-      path: dart_fusion
+    path: ../dart_fusion
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
