--- a/dart_fusion_flutter/example/pubspec.yaml
+++ b/dart_fusion_flutter/example/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dart_fusion:
-    path: ../../dart_fusion/
+    git:
+      url: https://github.com/Nialixus/dart_fusion.git
+      path: dart_fusion
   dart_fusion_flutter:
-    path: ../
+    git:
+      url: https://github.com/Nialixus/dart_fusion.git
+      path: dart_fusion_flutter
   easy_localization: ^3.0.3
   flutter:
     sdk: flutter
