update example pubspec

--- a/dart_fusion_flutter/example/pubspec.yaml
+++ b/dart_fusion_flutter/example/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dart_fusion:
+    git:
+      url: https://github.com/Nialixus/dart_fusion.git
+      path: dart_fusion
   dart_fusion_flutter:
     git:
       url: https://github.com/Nialixus/dart_fusion.git
