## 3.1.4 * Add cors default values, * Add try parse primitive object from string * Fix Cors.fromJSON parser * Update * Update * Add * Update  handler

--- a/dart_fusion_flutter/pubspec.yaml
+++ b/dart_fusion_flutter/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     git:
       url: https://github.com/Nialixus/dart_fusion.git
       path: dart_fusion
+      ref: v3.1.4
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
