--- a/dart_fusion_flutter/pubspec.yaml
+++ b/dart_fusion_flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dart_fusion_flutter
 description: A library that brings together a harmonious blend of essential
   tools, utilities, and components designed to supercharge your Dart projects.
-version: 3.1.4
+version: 3.1.5
 homepage: https://inidia.app
 repository: https://github.com/Nialixus/dart_fusion.git
 issue_tracker: https://github.com/Nialixus/dart_fusion/issues
@@ -22,10 +22,7 @@ environment:
 
 dependencies:
   dart_fusion:
-    git:
-      url: https://github.com/Nialixus/dart_fusion.git
-      path: dart_fusion
-      ref: v3.1.4
+    path: ../dart_fusion
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
