--- a/dart_fusion_flutter/example/pubspec.yaml
+++ b/dart_fusion_flutter/example/pubspec.yaml
@@ -9,9 +9,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dart_fusion_flutter:
-    git:
-      url: https://github.com/Nialixus/dart_fusion.git
-      path: dart_fusion_flutter
+    path: ../
   easy_localization: ^3.0.3
   flutter:
     sdk: flutter
