--- a/dart_fusion_flutter/pubspec.yaml
+++ b/dart_fusion_flutter/pubspec.yaml
@@ -21,8 +21,13 @@ environment:
   flutter: '>=1.17.0'
 
 dependencies:
+  # dart_fusion:
+  #   path: ../dart_fusion
   dart_fusion:
-    path: ../dart_fusion
+    git:
+      url: https://github.com/Nialixus/dart_fusion.git
+      path: dart_fusion
+      ref: v3.1.7
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
