--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 dart_fusion/**/*.html linguist-vendored
-dart_fusion_flutter/doc/api/*.html linguist-vendored
+dart_fusion_flutter/**/doc/api/* linguist-vendored
 *.sh linguist-vendored
